--- a/index.html
+++ b/index.html
@@ -543,6 +543,6 @@
         </div>
     </footer> 
 
-    <script src="shop.js"></script>
+    <script src="script.js.js"></script>
 </body>
 </html>
